clusters/sirius/apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        - name: tcp-8324
          containerPort: 8324
          protocol: TCP
        - name: tcp-32469
          containerPort: 32469
          protocol: TCP
        - name: udp-1900
          containerPort: 1900
          protocol: UDP
        - name: udp-32410
          containerPort: 32410
          protocol: UDP
        - name: udp-32412
          containerPort: 32412
          protocol: UDP
        - name: udp-32413
          containerPort: 32413
          protocol: UDP
        - name: udp-32414
          containerPort: 32414
          protocol: UDP
        volumeMounts:
        - name: plex-config
          mountPath: /config
        - name: plex-transcode
          mountPath: /transcode
        - name: plex-media
          mountPath: /data
        securityContext:
          privileged: true
      volumes:
      - name: plex-config
        hostPath:
          path: /mnt/secondary/plex/config
          type: DirectoryOrCreate
      - name: plex-transcode
        hostPath:
          path: /mnt/secondary/plex/transcode
          type: DirectoryOrCreate
      - name: plex-media
        hostPath:
          path: /mnt/secondary/readarr/books
          type: DirectoryOrCreate
