clusters/sirius/apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 32400
    targetPort: http
    protocol: TCP
  selector:
    app: plex
