clusters/sirius/apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - plex.sirius.moonblade.work
    secretName: plex-cert
  rules:
  - host: plex.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: plex.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: http
